Fixed `u-table -inner`'s `vertical-align` value

--- a/src/main.less
+++ b/src/main.less
@@ -48,7 +48,7 @@
   
   > .-inner {
     display: table-cell;
-    vertical-align: center;
+    vertical-align: middle;
     text-align: center;
   }
 }
